--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Style/AppStyles.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Style/AppStyles.xaml
@@ -33,6 +33,11 @@
         <Setter Property="Margin" Value="12,0,12,0"/>
     </Style>
 
+    <Style x:Key="PageTitleStyle" TargetType="TextBlock" BasedOn="{StaticResource TextBlockBase}">
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="Foreground" Value="#ff000000"/>
+    </Style>
+
     <!--image switch-->
     <Style x:Name="ImageSwitch_Default_Style" TargetType="sharedControl:ImageSwitch">
         <Setter Property="Template">
@@ -227,5 +232,6 @@
         <Setter Property="Foreground" Value="#ff808080"/>
     </Style>
 
+    
 
 </ResourceDictionary>
