--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/PhotoEditPage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/PhotoEditPage.xaml
@@ -13,7 +13,7 @@
     </Page.Resources>
 
     <Grid Background="White">
-        
+        <Image x:Name="image" Stretch="Uniform"/>
         
     </Grid>
 </Page>
