--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/MyThemeListPage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/MyThemeListPage.xaml
@@ -16,8 +16,16 @@
     <Page.BottomAppBar>
         <CommandBar x:Name="bottomAppBar">
             <!--<AppBarButton Icon="List" Label="选择" Click="selectItems_Click"/>-->
+
+            <!--<AppBarButton x:Name="share" Label="分享" Click="Share_Click">
+                <AppBarButton.Icon>
+                    <BitmapIcon UriSource="ms-appx:///Assets/Images/appbar.social.sharethis.png"/>
+                </AppBarButton.Icon>
+            </AppBarButton>-->
         </CommandBar>
     </Page.BottomAppBar>
+
+    
 
     <Grid Background="White">
         <ScrollViewer>
