--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/OperationPage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/OperationPage.xaml
@@ -13,16 +13,18 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        
+
         <Grid x:Name="stagePanel">
-            <Grid x:Name="stageBackground" Background="Wheat" PointerPressed="stageBackground_PointerPressed"/>
-            <Image x:Name="imgSingleMode" Stretch="Uniform" IsHitTestVisible="False" RenderTransformOrigin="0.5,0.5">
-                <Image.RenderTransform>
-                    <CompositeTransform x:Name="transformSingleModeImage"/>
-                </Image.RenderTransform>
-            </Image>
-            <Image x:Name="imgBiankuangOrBeijing" Stretch="Fill" IsHitTestVisible="False"/>
-            <Grid x:Name="stage"/>
+            <Grid x:Name="stagePanelForClipping">
+                <Grid x:Name="stageBackground" Background="Wheat" PointerPressed="stageBackground_PointerPressed"/>
+                <Image x:Name="imgSingleMode" Stretch="Uniform" IsHitTestVisible="False" RenderTransformOrigin="0.5,0.5">
+                    <Image.RenderTransform>
+                        <CompositeTransform x:Name="transformSingleModeImage"/>
+                    </Image.RenderTransform>
+                </Image>
+                <Image x:Name="imgBiankuangOrBeijing" Stretch="Fill" IsHitTestVisible="False"/>
+                <Grid x:Name="stage"/>
+            </Grid>
         </Grid>
 
         <!--layer buttons-->
