--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/HomePage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/HomePage.xaml
@@ -11,6 +11,12 @@
 
     </Page.Resources>
 
+    <Page.BottomAppBar>
+        <CommandBar>
+            <AppBarButton Icon="Setting" Label="设置" Click="settings_Click"/>
+        </CommandBar>
+    </Page.BottomAppBar>
+
     <Grid Background="Wheat">
         <!--buttons-->
         <Grid x:Name="buttonsPanel" HorizontalAlignment="Center" VerticalAlignment="Center" Background="Gray" RenderTransformOrigin="0.5,0.5">
@@ -35,11 +41,11 @@
                                    CheckStateChanged="ImageSwitch_CheckStateChanged"
                                    Enabled="True"/>-->
 
-        <sharedControl:SpriteTextBox x:Name="spriteTextBox" RenderTransformOrigin="0.5,0.5" >
+        <!--<sharedControl:SpriteTextBox x:Name="spriteTextBox" RenderTransformOrigin="0.5,0.5" >
             <sharedControl:SpriteTextBox.RenderTransform>
                 <CompositeTransform Rotation="-12"/>
             </sharedControl:SpriteTextBox.RenderTransform>
-        </sharedControl:SpriteTextBox>
+        </sharedControl:SpriteTextBox>-->
 
     </Grid>
 </Page>
