--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/SettingsPage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/SettingsPage.xaml
@@ -123,15 +123,25 @@
                     <CompositeTransform TranslateY="128"/>
                 </StackPanel.RenderTransform>
                 <Border Style="{StaticResource Settings_ItemContainer_Style}">
-                    <TextBlock Style="{StaticResource Settings_ItemText_Style}" Text="全局白边"/>
+                    <Grid>
+                        <TextBlock Style="{StaticResource Settings_ItemText_Style}" Text="全局白边"/>
+                        <sharedControl:ImageSwitch x:Name="edgeSwitch" Style="{StaticResource ImageSwitch_Normal_Style}"
+                                                   HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,12,0"
+                                                   CheckStateChanged="edge_CheckStateChanged"/>
+                    </Grid>
                 </Border>
                 <Border Style="{StaticResource Settings_ItemContainer_Style}">
-                    <TextBlock Style="{StaticResource Settings_ItemText_Style}" Text="全局阴影"/>
+                    <Grid>
+                        <TextBlock Style="{StaticResource Settings_ItemText_Style}" Text="全局阴影"/>
+                        <sharedControl:ImageSwitch x:Name="shadowSwitch" Style="{StaticResource ImageSwitch_Normal_Style}"
+                                                   HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,0,12,0"
+                                                   CheckStateChanged="shadow_CheckStateChanged"/>
+                    </Grid>
                 </Border>
             </StackPanel>
 
             <!--image size-->
-            <StackPanel x:Name="popupImageSize" VerticalAlignment="Bottom" Background="#ffffffff" RenderTransformOrigin="0.5,0.5">
+            <StackPanel Visibility="Collapsed" x:Name="popupImageSize" VerticalAlignment="Bottom" Background="#ffffffff" RenderTransformOrigin="0.5,0.5">
                 <StackPanel.RenderTransform>
                     <CompositeTransform TranslateY="192"/>
                 </StackPanel.RenderTransform>
